Potential close button alignment fix

--- a/wyndOS/style.css
+++ b/wyndOS/style.css
@@ -202,7 +202,7 @@ border-radius: 5px;
     padding-left: 7px;
     border-radius: 5px;
     margin: 0;
-    text-align: center;
+    text-align: center !important;
 }
 .close-btn:hover {
     color: teal;
@@ -501,6 +501,7 @@ display: none;
     padding: 0;
     margin: 0;
     text-align: center;
+    height: 25px;
 }
 .tabbed:hover {
     background-color: #c9c9c9;
